# ndc-typescript-deno

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh  index.ts  infer.ts  main.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  internal-issues-only.md
.github/workflows/: deno.yml  docker.yml
docs/: authentication.md  contributing.md  debugging.md  index.mdx  support.md
functions/: index.ts
src/: README.md  connector.rs  connector.ts  deno.d.ts  entrypoint.sh  infer.ts  main.rs  main.ts  mod.ts  schema.ts  sdk.ts  server.ts  util.ts
src/test/: classes_test.ts  complex_dependency_test.ts  conflicting_names_test.ts  external_dependencies_test.ts  infer_test.ts  inline_types_test.ts  ndc_schema_test.ts  nullable_types_test.ts  pg_dep_test.ts  prepare_arguments_test.ts  recursive_types_test.ts  type_parameters_test.ts  validation_algorithm_test.ts  void_test.ts
src/test/data/: classes.ts  complex.ts  conflicting_names.ts  conflicting_names_dep.ts  external_dependencies.ts  infinite_loop.ts  inline_types.ts  nullable_types.ts  pg_dep.ts  program.ts  recursive.ts  type_parameters.ts  validation_algorithm_update.ts  void_types.ts
