[package]
name = "ndc-typescript-deno"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ndc-typescript-deno"

[lib]
path = "src/lib.rs"

[dependencies]
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.3" }
ndc-hub = { git = "https://github.com/hasura/ndc-hub.git", rev = "2e65df302640af4153774954d67c108fb4a9950f", package = "ndc-sdk" }

async-trait = "0.1.68"
# deno_ast = { version = "0.27.3", features = ["transpiling"] }
# deno_core = "0.202.0"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
prometheus = "0.13.3"
schemars = { version = "0.8.12", features = ["smol_str", "url"] }
serde = "1.0.179"
serde_derive = "^1.0"
serde_json = { version = "1.0.104", features = ["raw_value"] }
sha1 = "0.10.5"
thiserror = "1.0"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
# v8 = "0.75.0"
indexmap = "^1"
reqwest = { version = "0.11.18", features = ["native-tls-alpn", "stream"] }
url = { version = "2.4.1", features = ["serde"] }